<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/load_embedded_js_bundle"
        android:contentDescription="@string/content_description_load_embedded_js_bundle"
        android:title="@string/load_embedded_js_bundle"
        app:showAsAction="never" />
    <item
        android:id="@+id/load_from_dev_server"
        android:contentDescription="@string/content_description_load_from_dev_server"
        android:title="@string/load_from_dev_server"
        app:showAsAction="never" />
    <item
        android:id="@+id/remember_last_component"
        android:checkable="true"
        android:contentDescription="@string/content_description_remember_last_component"
        android:title="@string/remember_last_component"
        app:showAsAction="never" />
    <item
        android:id="@+id/scan_qr_code"
        android:contentDescription="@string/content_description_scan_qr_code"
        android:title="@string/scan_qr_code"
        app:showAsAction="never" />
    <item
        android:id="@+id/show_dev_options"
        android:contentDescription="@string/content_description_show_dev_options"
        android:enabled="false"
        android:title="@string/show_dev_options"
        app:showAsAction="never" />
</menu>
